fixed horizontal scroll in card list

--- a/styles/style.css
+++ b/styles/style.css
@@ -67,6 +67,7 @@ ol {
   position: relative;
   max-height: 298px;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .result__video-container {
